# AUTOr3pair

./: .gitignore  CMakeLists.txt  README.md
Tools/Hausdorf_distance/: geometric_dif.py
Tools/Plant-UML for project/: AUTOr3pairKEY.puml  CITYJSON.puml  CITYJSON_metadata.eps  COtoTU3d.puml  CityObject_Cityjson.puml  CityObject_TU3DJSON.puml  CityOjecttypes.puml  Geometryclasses.puml  Methodology.puml  OBJtoTU3d.puml  Readme.md  RepairReport.puml  Val3dityReport.puml  weirdErrors.puml
Tools/Python_translate_FileFormats/: CityJSONCombineShells.py  CityJSON_2_CityJSON_WITH_SementicsMaterials.py  CityJSON_3dBAG_2_OBJ.py  CityJSON_msurf_2_solid_msolid_OBJ.py  Poly_2_CityJSON_Msurf.py
Tools/VizR3pair/: README.md  (+1 more)
data/: README.md
docs/: AdditionalRepairs.md  BuildCmake.md  Errorcodes_vs_Repairs.md  How_works_AUTOr3pair.md  Output.md  Repair_Report.md  UserInput.md
src/: BuildingPartr3pair.cpp  BuildingPartr3pair.h  CityObject.cpp  CityObject.h  CompositeSolid.cpp  CompositeSolid.h  CompositeSurface.cpp  CompositeSurface.h  Defenitions.h  DefenitionsCGAL.h  DefenitionsUseCase.h  DefenitionsVal3dity.h  Geometry.cpp  Geometry.h  GeometryTools_makeCO.cpp  GeometryTools_makeCO.h  Geometrytools.cpp  Geometrytools.h  GeometrytoolsDetriangulationPoint3.cpp  GeometrytoolsDetriangulationPoint3.h  GeometrytoolsDetriangulationPoint3E.cpp  GeometrytoolsDetriangulationPoint3E.h  Geometrytools_makeCGAL.cpp  Geometrytools_makeCGAL.h  Globalr3pair.cpp  Globalr3pair.h  InputOutput.cpp  InputOutput.h  MultiSolid.cpp  MultiSolid.h  MultiSurface.cpp  MultiSurface.h  Polyr3pair.cpp  Polyr3pair.h  Ringr3pair.cpp  Ringr3pair.h  Shellr3pair.cpp  Shellr3pair.h  Solid.cpp  Solid.h  (+11 more)
tests/: conftest.py  conftest_val3dity.py  pytest.ini  test_Polyr3pair.py  test_Ringr3pair.py  test_Shellr3pair.py  test_SolidInteractionr3pair.py  test_Solidr3pair.py  test_SubPartr3pair.py  test_file_parameters.py  test_file_prepost_processing.py  test_input_LOD.py  test_input_RepairFile_formats.py  test_input_UseCase_formats.py  test_input_valid.py
tests_thesis/: conftest.py  conftest_val3dity.py  test_builds.py  test_thesis_3dBAG.py  test_thesis_CityJSONWebsite.py
(+482 files in other folders)
